# Medicare-Star-Rating-Analysis

./: Phase1_Data_Exploration.ipynb  README.md  pyproject.toml
data/raw/2024 Star Ratings Data Table - (Jul 2 2024)_0/: 2024 Star Ratings Data Table - CAI (Jul 2 2024).csv  2024 Star Ratings Data Table - Disenrollment Reasons (Jul 2 2024).csv  2024 Star Ratings Data Table - High Performing Contracts (Jul 2 2024).csv  2024 Star Ratings Data Table - Low Performing Contracts (Jul 2 2024).csv  2024 Star Ratings Data Table - Measure Data (Jul 2 2024).csv  2024 Star Ratings Data Table - Measure Stars (Jul 2 2024).csv  2024 Star Ratings Data Table - Notes (Jul 2 2024).csv  2024 Star Ratings Data Table - Part C Cut Points (Jul 2 2024).csv  2024 Star Ratings Data Table - Part D Cut Points (Jul 2 2024).csv  2024 Star Ratings Data Table - Summary Rating (Jul 2 2024).csv  2024_Report_Card_Master_Table_2024_07_02.xlsx  PQA_Medication_List_ADH_YOS2022_Mar_2023.xlsx  PQA_Medication_List_SUPD_YOS2022_Mar_2023.xlsx
data/raw/2025-star-ratings-data-tables/: 2025 Star Ratings Data Table - CAI (Dec 2 2024).csv  2025 Star Ratings Data Table - Disenrollment Reasons (Dec 2 2024).csv  2025 Star Ratings Data Table - Domain Stars (Dec 2 2024).csv  2025 Star Ratings Data Table - High Performing Contracts (Dec 2 2024).csv  (+8 more)
powerbi_data/: all_contracts.csv  contracts_35_stars.csv  measure_priorities.csv  measure_scores_35_stars.csv
sql/: 01_schema.sql  02_load_data.py  03_transform.py  04_data_quality.sql  05_update_weights.sql  06_analysis_queries.sql  07_export_for_powerbi.py
